# Akaza

./: LICENCE  README.md  keep_alive.py  main.py  pyproject.toml  writeup.md
cogs/: dutils.py  eval.py  giveaways.py
data/: bank.json  bl.json  donations.json  freezed.json  gawid.json  gawinit.json  rooms.json
